--- a/src/sont.html
+++ b/src/sont.html
@@ -67,9 +67,11 @@
                         гарантией. Оставьте заявку на ремонт<br class="hidden lg:block">
                         прямо сейчас!</p>
                     <div class="flex flex-col lg:flex-row gap-8">
-                        <button class="text-white text-lg px-[50px] py-2 bg-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
+                        <button
+                            class="text-white text-lg px-[50px] py-2 bg-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
                             заявку</button>
-                        <button class="bg-white text-lg px-[50px] py-2 text-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
+                        <button
+                            class="bg-white text-lg px-[50px] py-2 text-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
                             заявку</button>
                     </div>
                 </aside>
@@ -102,18 +104,108 @@
         <section class="flex flex-col px-4 py-10 gap-8 max-w-7xl m-auto items-center justify-between">
             <h1 class="text-2xl lg:text-5xl font-bold text-center">Мы ремонтируем</h1>
             <div class="w-full grid grid-cols-3 gap-6 gap-y-10 lg:grid-cols-6">
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 6.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 7.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 8.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 9.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 10.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 11.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 12.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 13.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 14.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 15.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 16.png"  alt=""></div>
-                <div class="p-4 shadow-lg"><img src="Mimg/image copy 17.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 6.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 7.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 8.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 9.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 10.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 11.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 12.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 13.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 14.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 15.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 16.png" alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 17.png" alt=""></div>
+            </div>
+        </section>
+
+        <section class="flex flex-col px-10 py-10 mt-10 gap-8 max-w-7xl m-auto items-center justify-between shadow-xl rounded-2xl">
+            <h1 class="text-2xl lg:text-4xl text-center font-bold">Неисправности</h1>
+            <div class="flex flex-col lg:flex-row w-full justify-between">
+                <aside class="w-[30%]">
+                    <div class="flex flex-col gap-4 font-sans  text-[20px]">
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо зарядки</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает аккумулятор</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает динамик</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо наушников</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает вибрация</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает звук</p> <br>
+                        </div>
+                    </div>
+                </aside>
+                <aside class="w-[30%]">
+                    <div class="flex flex-col gap-4 font-sans  text-[20px]">
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо зарядки</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает аккумулятор</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает динамик</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо наушников</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает вибрация</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает звук</p> <br>
+                        </div>
+                    </div>
+                </aside>
+                <aside class="w-[30%]">
+                    <div class="flex flex-col gap-4 font-sans  text-[20px]">
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо зарядки</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает аккумулятор</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает динамик</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает гнездо наушников</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает вибрация</p> <br>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <p>Не работает звук</p> <br>
+                        </div>
+                    </div>
+                </aside>
             </div>
         </section>
     </main>
