--- a/src/sont.html
+++ b/src/sont.html
@@ -119,7 +119,8 @@
             </div>
         </section>
 
-        <section class="flex flex-col px-10 py-10 mt-10 gap-8 max-w-7xl m-auto items-center justify-between shadow-xl rounded-2xl">
+        <section
+            class="flex flex-col px-10 py-10 mt-10 gap-8 max-w-7xl m-auto items-center justify-between shadow-xl rounded-2xl">
             <h1 class="text-2xl lg:text-4xl text-center font-bold">Неисправности</h1>
             <div class="flex flex-col lg:flex-row w-full justify-between">
                 <aside class="w-[30%]">
@@ -208,6 +209,16 @@
                 </aside>
             </div>
         </section>
+
+        <section class="flex flex-col px-4 py-10 gap-6 max-w-7xl m-auto items-center justify-between">
+            <h1 class="text-3xl font-semibold text-[#00C65E] text-center">Узнайте стоимость ремонта онлайн</h1>
+            <h1 class="text-xl font-medium text-center">И получите скидку 5%</h1>
+            <button
+                class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit">Узнать</button>
+
+        </section>
+
+       
     </main>
 </body>
 
