--- a/src/sont.html
+++ b/src/sont.html
@@ -122,87 +122,87 @@
         <section
             class="flex flex-col px-10 py-10 mt-10 gap-8 max-w-7xl m-auto items-center justify-between shadow-xl rounded-2xl">
             <h1 class="text-2xl lg:text-4xl text-center font-bold">Неисправности</h1>
-            <div class="flex flex-col lg:flex-row w-full justify-between">
-                <aside class="w-[30%]">
-                    <div class="flex flex-col gap-4 font-sans  text-[20px]">
+            <div class="flex flex-col lg:flex-row w-full justify-between gap-10 lg:gap-0">
+                <aside class="lg:w-[30%]">
+                    <div class="flex flex-col gap-4 font-sans text-[20px]">
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
-                            <p>Не работает гнездо зарядки</p> <br>
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
+                            <p>Не работает гнездо зарядки</p>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает аккумулятор</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает динамик</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает гнездо наушников</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает вибрация</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает звук</p> <br>
                         </div>
                     </div>
                 </aside>
-                <aside class="w-[30%]">
+                <aside class="lg:w-[30%]">
                     <div class="flex flex-col gap-4 font-sans  text-[20px]">
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает гнездо зарядки</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает аккумулятор</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает динамик</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает гнездо наушников</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает вибрация</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает звук</p> <br>
                         </div>
                     </div>
                 </aside>
-                <aside class="w-[30%]">
+                <aside class="lg:w-[30%]">
                     <div class="flex flex-col gap-4 font-sans  text-[20px]">
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает гнездо зарядки</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает аккумулятор</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает динамик</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает гнездо наушников</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает вибрация</p> <br>
                         </div>
                         <div class="flex items-center gap-2">
-                            <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+                            <img class="w-[20px] h-[20px]" src="Mimg/image copy 18.png" alt="">
                             <p>Не работает звук</p> <br>
                         </div>
                     </div>
@@ -213,12 +213,80 @@
         <section class="flex flex-col px-4 py-10 gap-6 max-w-7xl m-auto items-center justify-between">
             <h1 class="text-3xl font-semibold text-[#00C65E] text-center">Узнайте стоимость ремонта онлайн</h1>
             <h1 class="text-xl font-medium text-center">И получите скидку 5%</h1>
-            <button
-                class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit">Узнать</button>
-
+            <button class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit">Узнать</button>
         </section>
 
-       
+
+        <section class="flex flex-col px-4 py-10 gap-8 max-w-7xl m-auto items-center justify-between lg:flex-row">
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
+
+                <article class="shadow-lg">
+                    <img class="m-auto" src="Mimg/image copy 19.png" alt="">
+                    <div class=" p-4 rounded-xl shadow-lg">
+                        <h1 class="text-center text-[25px] text-[#00C65E] font-bold">Модульный ремонт</h1>
+                        <br>
+                        <ul class="space-y-2 text-[18px] font-[500]">
+                            <li>Замена блока питания</li>
+                            <li>Чистка от пыли</li>
+                            <li>Замена кнопок громкости</li>
+                            <li>Замена кнопки Home (домой)</li> <br>
+                        </ul>
+                        <div class="flex justify-end">
+                            <img src="uimg/default.png" alt="">
+                        </div>
+                    </div>
+                </article>
+                <article class="shadow-lg">
+                    <img class="m-auto" src="Mimg/image copy 20.png" alt="">
+                    <div class=" p-4 rounded-xl shadow-lg">
+                        <h1 class="text-center text-[25px] text-[#00C65E] font-bold">Модульный ремонт</h1>
+                        <br>
+                        <ul class="space-y-2 text-[18px] font-[500]">
+                            <li>Замена блока питания</li>
+                            <li>Чистка от пыли</li>
+                            <li>Замена кнопок громкости</li>
+                            <li>Замена кнопки Home (домой)</li> <br>
+                        </ul>
+                        <div class="flex justify-end">
+                            <img src="uimg/default.png" alt="">
+                        </div>
+                    </div>
+                </article>
+                <article class="shadow-lg">
+                    <img class="m-auto" src="Mimg/image copy 21.png" alt="">
+                    <div class=" p-4 rounded-xl shadow-lg">
+                        <h1 class="text-center text-[25px] text-[#00C65E] font-bold">Модульный ремонт</h1>
+                        <br>
+                        <ul class="space-y-2 text-[18px] font-[500]">
+                            <li>Замена блока питания</li>
+                            <li>Чистка от пыли</li>
+                            <li>Замена кнопок громкости</li>
+                            <li>Замена кнопки Home (домой)</li> <br>
+                        </ul>
+                        <div class="flex justify-end">
+                            <img src="uimg/default.png" alt="">
+                        </div>
+                    </div>
+                </article>
+                <article class="shadow-lg">
+                    <img class="m-auto" src="Mimg/image copy 22.png" alt="">
+                    <div class=" p-4 rounded-xl shadow-lg">
+                        <h1 class="text-center text-[25px] text-[#00C65E] font-bold">Модульный ремонт</h1>
+                        <br>
+                        <ul class="space-y-2 text-[18px] font-[500]">
+                            <li>Замена блока питания</li>
+                            <li>Чистка от пыли</li>
+                            <li>Замена кнопок громкости</li>
+                            <li>Замена кнопки Home (домой)</li> <br>
+                        </ul>
+                        <div class="flex justify-end">
+                            <img src="uimg/default.png" alt="">
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+
     </main>
 </body>
 
