--- a/src/sont.html
+++ b/src/sont.html
@@ -287,6 +287,125 @@
             </div>
         </section>
 
+        <section class="flex flex-col px-4 py-10 gap-8 max-w-7xl m-auto items-center justify-between">
+            <h1 class="text-center text-4xl font-bold">Нам доверяют</h1>
+
+            <div class="grid grid-cols-1 lg:grid-cols-6">
+                <img src="./Mimg/image copy 25.png" alt="" class="col-span-1 lg:col-span-3">
+                <img src="./Mimg/image copy 26.png" alt="" class="col-span-1 lg:col-span-3">
+                <img src="./Mimg/image copy 27.png" alt="" class="col-span-1 lg:col-span-2">
+                <img src="./Mimg/image copy 28.png" alt="" class="col-span-1 lg:col-span-2">
+                <img src="./Mimg/image copy 29.png" alt="" class="col-span-1 lg:col-span-2">
+
+            </div>
+        </section>
+
+        <section class="section3 bg-[#F7F7F7]">
+            <div class="w-[90%] lg:max-w-[1200px] m-auto py-10 space-y-5">
+                <h1 class="text-center text-3xl font-semibold">Остались вопросы?</h1>
+                <h1 class="text-xl font-medium text-center">Оставьте заявку и нам менеджер свяжется с вами</h1>
+                <div class="flex justify-center gap-10">
+                    <div class="space-y-1 flex items-center lg:gap-16 flex-col lg:flex-row">
+                        <div>
+                            <h1 class="text-lg font-medium text-center lg:text-left">Телефон</h1>
+                            <input type="text" placeholder="+ 7 (123)-456-78-90"
+                                class="border-[1px] border-gray-300 px-4 pr-16 py-2 bg-white rounded-xl">
+                        </div>
+                        <button
+                            class="lg:self-end text-base font-medium text-white bg-[#00C65E] px-10 py-2 rounded-xl">Заказать
+                            звонок</button>
+                    </div>
+                </div>
+                <div class="flex justify-center items-center lg:gap-10 gap-3">
+                    <h1 class="text-lg font-medium">Или позвоните сами</h1>
+                    <h1 class="font-medium"><i class="text-[#00C65E] fa-solid fa-phone"></i> +7 (968) 430-88-20</h1>
+                </div>
+            </div>
+        </section>
+
+        <section class="section4 w-[90%] max-w-[1200px] m-auto py-16">
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Вы хотите продать или купить что-либо быстро и
+                выгодно?</h1><br>
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Официальный ремонт техники: срочно и недорого
+                Сервис центр техники : мы работаем для вас <br>
+                dily.ru – это современная, стремительно развивающаяся компания в Москве, которая специализируется на
+                ремонте любых устройств торговой марки Эппл. В нашей команде трудятся сертифицированные мастера, готовые
+                в кратчайшие сроки устранить любые неисправности iPhone, iPad, MacBook, iMac, iWatch, iPod. Мы сможем
+                поменять разбитый экран, вышедший из строя аккумулятор, сгоревшую материнскую плату вашего смартфона или
+                планшета. Также оказываем услуги по разблокировке iCloud и выездному ремонту компьютеров, ноутбуков и
+                мобильных гаджетов. <br> <br>
+                Доступный ремонт техники Apple с выездом на дом
+                Бешеный темп жизни диктует свои правила. Зачастую у наших клиентов попросту нет времени на поездку в
+                сервисный центр, из-за чего им приходится мириться с недостатками в работе электроники. Но мы как никто
+                больше понимаем, сколько проблем способны доставить трещины на экране или «залипающие» кнопки
+                устройства. Поэтому предлагаем своим клиентам такую удобную услугу, как срочный ремонт Apple с выездом
+                на дом, цены на которую вас приятно удивят.
+                развернуть <br>
+                меньше</h1><br>
+            <h1 class="text-[#818187] text-sm underline">Развернуть <i class="ml-3 fa-solid fa-angle-down"></i></h1>
+        </section>
+
+        <footer class="bg-[#EFEFEF]">
+            <nav class="border-b-2 border-gray-400 flex justify-between items-center">
+                <div class="w-[90%] max-w-[1200px] m-auto py-3 justify-between items-center flex">
+                    <div class="flex gap-10 items-center">
+                        <img src="/src/rimg/1.png" alt="" class="w-[72p] h-[31px]">
+                        <h1 class="text-[#00C65E] hidden lg:block"><i class="fa-solid fa-location-arrow"></i>
+                            Москва <span><i class="text-black fa-solid fa-angle-down"></i></span></h1>
+                    </div>
+                    <div class="flex gap-3 items-center">
+                        <h1 class="text-lg font-medium hidden lg:block">Присоединяйтесь к нам </h1>
+                        <img src="./Mimg/image copy 24.png" class="w-[110px]" alt="">
+                    </div>
+                </div>
+            </nav>
+
+            <section class="w-[90%] max-w-[1200px] lg:gap-[80px] gap-10 m-auto flex py-10 flex-wrap">
+                <ul class="space-y-2">
+                    <li class="text-base font-semibold">Доска объявлений</li>
+                    <li class="text-sm font-normal">Объявления</li>
+                    <li class="text-sm font-normal">Магазины</li>
+                    <li class="text-sm font-normal">Благотворительность</li>
+                    <li class="text-sm font-normal">Личный кабинет</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Сервисный центр</li>
+                    <li class="text-sm font-normal">Что мы чиним</li>
+                    <li class="text-sm font-normal">Адреса сервисных<br>центров</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Интернет-магазин</li>
+                    <li class="text-sm font-normal">Каталог товаров</li>
+                    <li class="text-sm font-normal">Доставка и оплата</li>
+                    <li class="text-sm font-normal">Корзина</li>
+                    <li class="text-sm font-normal">Личный кабинет</li>
+                    <li class="text-sm font-normal">Контакты</li>
+                    <li class="text-sm font-normal">Вакансии</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Пользователям</li>
+                    <li class="text-sm font-normal">Гарантии</li>
+                    <li class="text-sm font-normal">Доставка и оплата</li>
+                    <li class="text-sm font-normal">Служба поддержки</li>
+                    <li class="text-sm font-normal">Вопрос-ответ</li>
+                </ul>
+            </section>
+
+            <nav class="bg-white py-3">
+                <div class="w-[90%] lg:max-w-[1200px] m-auto flex justify-between">
+                    <div class="flex lg:gap-7 text-sm font-semibold flex-wrap gap-2">
+                        <h1>Политика конфиденциальности</h1>
+                        <h1 class="hidden lg:block">Пользовательское соглашение</h1>
+                        <h1 class="hidden lg:block">Использование cookies</h1>
+                        <h1 class="hidden lg:block">Карта сайта</h1>
+                    </div>
+                    <div class="flex gap-7 text-sm font-semibold">
+                        <h1>Dily.ru</h1>
+                        <h1>2021©</h1>
+                    </div>
+                </div>
+            </nav>
+        </footer>
     </main>
 </body>
 
